# Oakum

./: .gitignore  CMakeLists.txt  README.md
.github/scripts/: format_linux.sh
.github/workflows/: cmake-multi-platform.yml  format.yml
documentation/: CMakeLists.txt  Doxyfile.txt
example/: CMakeLists.txt  example_gtest.cpp  example_simple.cpp  example_stack_traces.cpp  main.cpp
source/: CMakeLists.txt  error.h  oakum.cpp  oakum.h  oakum_api.cpp  oakum_controller.cpp  oakum_controller.h  operators.cpp  stack_trace.cpp  stack_trace.h  syscalls.cpp  syscalls.h
source/include/: CMakeLists.txt
source/include/oakum/: oakum_api.h
source/linux/: CMakeLists.txt  child_process.cpp  child_process.h  error.h  pipe.h  stack_trace_linux.cpp
source/windows/: stack_trace_windows.cpp
tests/: CMakeLists.txt
tests/acceptance_tests/: CMakeLists.txt  main.cpp
tests/common/: CMakeLists.txt  allocate_memory_function.cpp  allocate_memory_function.h  fixtures.h
tests/unit_tests/: CMakeLists.txt  mock_syscalls.h  oakum_controller_tests.cpp
tests/unit_tests/api/: CMakeLists.txt  capabilities_tests.cpp  detect_leaks_tests.cpp  get_allocations_tests.cpp  ignore_tests.cpp  init_tests.cpp  operator_tests.cpp  release_allocations_tests.cpp  resolve_stack_trace_source_locations_tests.cpp  resolve_stack_trace_symbols_tests.cpp
tests/unit_tests/linux/: mock_syscalls_linux.cpp
tests/unit_tests/windows/: mock_syscalls_windows.cpp
unit_tests/: CMakeLists.txt  allocate_memory_function.cpp  allocate_memory_function.h  dummy_functions.cpp  dummy_functions.h  fixtures.h  mock_syscalls.cpp  mock_syscalls.h  oakum_controller_tests.cpp
unit_tests/api/: detect_leaks_tests.cpp  fixtures.h  get_allocations_tests.cpp  get_stack_trace_tests.cpp  ignore_tests.cpp  init_tests.cpp  operator_tests.cpp  release_allocations_tests.cpp  resolve_stack_trace_source_locations_tests.cpp  resolve_stack_trace_symbols_tests.cpp  resolve_stack_traces_tests.cpp
unit_tests/linux/: mock_syscalls_linux.cpp
unit_tests/windows/: mock_syscalls_windows.cpp
